# pfclakr.github.io

./: .gitignore  Cargo.toml  README.md  Readme.md  index.html  package-lock.json  package.json  style.css  vite.config.ts
.github/workflows/: build.yml  deploy.yml  main.yml
posts/: index.json
src/: index.html  lib.rs
src/static/: index.html
static/: style.css
tools/: build_posts.js
www/: index.html
www/posts/: hello.md
