[package]
name = "blog"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"

[build-dependencies]
# Add any dependencies required by your build script here